# gdem

./: .travis.yml  CMakeLists.txt  Calcolo_Parallelo.files  Calcolo_Parallelo.includes  Doxyfile.in  Makefile  README.md
datasets/: datasets.md
scripts/: pair2adjacency.py  splitInput.py  timings.py
src/: CMakeLists.txt  counter.h  debug.h  fm_counter.c  fm_counter.h  graph.c  graph.h  hll_counter.c  hll_counter.h  hyper_anf_mpi.c  hyper_anf_mpi.h  hyper_anf_serial.c  hyper_anf_serial.h  main.c  mpi_hello.c  parallel.c  parser.c  parser.h  serial.c  test_fm_counter.c  test_hll_counter.c  test_parser.c
